syntax = "proto3";
import "playerpb.proto";

package gserver;

message MessagePB {
	enum MessageType {
		MT_UNKNOWN = 0;
		MT_ERROR_MESSAGE = 1;
		MT_SYSTEM_NOTIFICATION = 2;
		MT_PRIVATE_CHAT = 3;
		MT_GROUP_CHAT = 4;
	}

	enum DataType {
		DT_UNKNOWN = 0;
		DT_TEXT = 1;
		DT_IMAGE = 2;
		DT_SOUND = 3;
		DT_VIDEO = 4;
	}

	int64 timestamp = 1;
	MessageType messageType = 2;
	DataType dataType = 3;
	PlayerPB sender = 4;
	string receiverId = 5; // user's id or room's id
	string data = 6;
}