syntax = "proto3";

package gserver;

message PlayerPB {
	string id = 1;
	string name = 2;
	string password = 3;
}